# mrt-flightradar2

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml  renovate.json
.github/workflows/: cargo-msrv.yaml  codeql.yml  docker-publish.yml  update-ats.yaml
src/: airports.rs  client_config.js  flights.rs  main.rs  utils.rs  waypoints.rs  wd.yml
src/config/: client_config.js  engine_config.yml
