[package]
name = "mrt-flightradar2"
version = "0.1.0"
edition = "2024"

[dependencies]
air-traffic-simulator = { git="https://github.com/bitfielddev/air-traffic-simulator" }

color-eyre = "0.6.3"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
itertools = "0.13.0"

surf = "2.3.2"
csv = "1.3.1"
glam = "0.29.2"